--- a/Project-SPA/angular.json
+++ b/Project-SPA/angular.json
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "Project-SPA"
+    }
+  },
+  "defaultProject": "Project-SPA",
+  "cli": {
+    "analytics": false
+  }
 }
